Add Hotkey Configration function

--- a/Screen2GP/Screen2GP.exe.Config
+++ b/Screen2GP/Screen2GP.exe.Config
@@ -7,5 +7,9 @@
     <add key="string1" value="" />
     <add key="string2" value="" />
     <add key="string3" value="" />
+    <add key="string4" value="0" />
+    <add key="string5" value="16" />
+    <add key="string6" value="0" />
+    <add key="string7" value="17" />
   </appSettings>
 </configuration>
